Product Landing Page Update # 1
- Added collapsible nav bar for smaller screens
- Styled static redirect page

--- a/ProductLandingPage/static.html
+++ b/ProductLandingPage/static.html
@@ -8,15 +8,36 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    <body style="text-align: center;">
-        <h1>Sunrise Parabellum</h1>
-        <h3>Thanks for subscribing.
-            <br>
-            Revachol awaits.</h3>
-        <figure>
-            <img src="https://cdna.artstation.com/p/assets/images/images/026/369/814/large/aleksander-rostov-conquest-of-revachol-flat-contrast.jpg?1588604494" width="90%">
-            <br>
-            <figcaption style="display: inline; background-color: #90280F; color: #f1f1f1;">Art by Aleksander Rostov</figcaption>
-        </figure>
+    <style>
+        h4{
+            background-color: #90280F;
+        }
+        #thanks-message{
+            background-color: #111111aa;
+            margin-bottom: 15%;
+            padding: 0 5%;
+        }
+        #static-main{
+            background-image: url("https://cdna.artstation.com/p/assets/images/images/026/369/814/large/aleksander-rostov-conquest-of-revachol-flat-contrast.jpg?1588604494");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 80%;
+            display: flex;
+            flex-direction: column-reverse;
+            align-items: left;
+            min-height: 100vh;
+            margin: auto;
+        }
+    </style>
+    <body>
+        <div id="static-main">
+            <div id="thanks-message">
+                <h1>Sunrise Parabellum</h1>
+                <h3>Thanks for subscribing.<br>Revachol awaits.</h3>
+                <h4 id="art-credit">Art by Aleksander Rostov</h4>
+            </div>
+        </div>
+        
     </body>
 </html>
