--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -57,8 +57,8 @@
                 <div id="form-div">
                     <h1 style="background-color: #111; color: white;">TIME TO GET TO WORK.</h1>
                     <h3>Register below to keep up to date with news and announcements</h3>
-                    <form id="form" action="./static.html" method="POST"> <!--User 7-->
-                        <input type="email" id="email" placeholder="email@example.com" autocomplete="off" required> <!--User 8, 9, 10, 12-->
+                    <form id="form" action="./static.html" method="POST"> <!--User 7, 12-->
+                        <input type="email" id="email" placeholder="email@example.com" autocomplete="off" required> <!--User 8, 9, 10-->
                         <input id="submit" type="submit" value="Submit"> <!--User 11-->
                     </form>
                 </div>
