--- a/ProductLandingPage/index.html
+++ b/ProductLandingPage/index.html
@@ -8,32 +8,23 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    <script>
-        function topNavFunction(){
-            var x = document.getElementById("nav-bar");
-            if(x.className === "topnav"){
-                x.className += "-responsive";
-            }
-            else{
-                x.className = "topnav";
-            }
-        }
-    </script>
     <body>
         <div id="main">
             <header id="header"> <!--User 1-->
-                <div id="nav-bar" class="topnav"> <!--User 3-->
-                    <a href="javascript:void(0)" onclick="topNavFunction()" class="responsive-nav-link">
-                        <img src="https://img.icons8.com/?size=100&id=120374&format=png&color=f1f1f1" alt="Hamburger Menu Icon" class="responsive-nav-img">
-                    </a>
-                    <a href="#main">
-                        <img id="header-img" src="https://melvins-world.neocities.org/DiscoAssets/DELogo.png" alt="Disco Elysium Icon" class="nav-img"> <!--User 2-->
-                    </a>
-                    <a href="#about" class="nav-link">ABOUT</a> <!--User 4, 5, 13-->
-                    <a href="#register" class="nav-link">REGISTER</a>
-                    <a href="#features" class="nav-link">FEATURES</a>
-                    <a href="#trailer" class="nav-link">TRAILER</a>
-                </div>
+                <nav id="nav-bar" class="topnav"> <!--User 3 - MAKE THIS A NAV ELEMENT -->
+                    <ul>
+                        <li><a id="responsive-nav-link" class="responsive-nav-link">
+                            <img src="https://img.icons8.com/?size=100&id=120374&format=png&color=f1f1f1" alt="Hamburger Menu Icon" class="responsive-nav-img">
+                        </a></li>
+                        <li><a href="#main">
+                            <img id="header-img" src="https://melvins-world.neocities.org/DiscoAssets/DELogo.png" alt="Disco Elysium Icon" class="nav-img"> <!--User 2-->
+                        </a></li>
+                        <li><a href="#about" class="nav-link">ABOUT</a></li> <!--User 4, 5, 13-->
+                        <li><a href="#register" class="nav-link">REGISTER</a></li>
+                        <li><a href="#features" class="nav-link">FEATURES</a></li>
+                        <li><a href="#trailer" class="nav-link">TRAILER</a></li>
+                    </ul>
+                </nav>
             </header>
             <div id="banner-img-div">
                 <img id="banner-img" src="https://melvins-world.neocities.org/DiscoAssets/DELogo.png" alt="Disco Elysium Logo">
@@ -55,8 +46,8 @@
             </div>
             <div id="register">
                 <div id="form-div">
-                    <h1 style="background-color: #111; color: white;">TIME TO GET TO WORK.</h1>
-                    <h3>Register below to keep up to date with news and announcements</h3>
+                    <h1 style="text-align: center; display: inline-block; background-color: #111; color: white;">TIME TO GET TO WORK.</h1>
+                    <h3 id="test-font-change">Register below to keep up to date with news and announcements</h3>
                     <form id="form" action="./static.html" method="POST"> <!--User 7, 12-->
                         <input type="email" id="email" placeholder="email@example.com" autocomplete="off" required> <!--User 8, 9, 10-->
                         <input id="submit" type="submit" value="Submit"> <!--User 11-->
@@ -241,4 +232,5 @@
             </div>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
