Javascript Practice; Momentum App

--- a/JavascriptPractice/index.html
+++ b/JavascriptPractice/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Javascript Practice</title>
@@ -7,10 +7,29 @@
     <body>
         <h1>Javascript Practice</h1>
         <h2>Open the Console with [ Ctrl + Shift + I ]</h2>
-        <!-- <ul id="superheroList">
-        </ul> -->
+        <ul id="superheroList">
+        </ul>
         <img id="img" height= 600px src="https://media.discordapp.net/attachments/1323722725155672105/1354747609113296956/8b38741b-c939-4c23-8a53-1c2af8060eba.png?ex=68382788&is=6836d608&hm=c1f635d47730eb731a0544be38a4e42e88096b2b672ea5114ecb181e2d7ba0f6&=&format=webp&quality=lossless&width=930&height=930">
         <p id="key"> Pressed Key : </p>
     </body>
     <script src="practice.js"></script>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Quiz App</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; margin-top: 100px; }
+    #choices button { margin: 5px; padding: 10px 20px; }
+  </style>
+</head>
+<body>
+  <h1 id="question">Loading...</h1>
+  <div id="choices"></div>
+  <p id="progress"></p>
+  <button id="restart" style="display: none;">Restart Quiz</button>
+  <script src="practice.js"></script>
+</body>
 </html>
