--- a/MomentumApp/index.html
+++ b/MomentumApp/index.html
@@ -42,7 +42,8 @@
             <section id="task-section">
                 <section id="task-header-section">
                     <span id="task-header">Task List</span>
-                    <input type="image" src="resources/light/add-icon.svg" id="add-task-button" >
+                    <input type="image" src="resources/light/add-icon.svg" id="add-task-button">
+                    <input type="image" src="resources/light/trash-icon.svg" id="delete-list-button">
                 </section>
                 <div id="task-div">
                     <form id="task-input-form" class="hidden">
